--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,13 +4,40 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADING */
+
 .header--main {
   font-weight: normal;
   font-size: 50px;
   color: #fff;
 }
 
+.header--secondary {
+  font-weight: 300;
+  font-size: 42px;
+  color: #fff;
+}
+
+.header--sub-header {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 21px;
+  color: gray;
+}
+
+/* LINKS */
+
 .link--cta {
   font-size: 16px;
   color: aquamarine;
+}
+
+.img {
+  width: 70%;
+  height: auto;
+}
+
+.tgh {
+  height: 100px;
+  width: auto;
+  transform: scale(0.5);
 }
