--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,7 +21,7 @@ body {
 .header--sub-header {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 21px;
-  color: gray;
+  color: grey;
 }
 
 /* LINKS */
@@ -36,8 +36,9 @@ body {
   height: auto;
 }
 
-.tgh {
-  height: 100px;
-  width: auto;
-  transform: scale(0.5);
+/* FOOTER */
+
+.link--cta {
+  font-size: 16px;
+  color: grey;
 }
